# ai-council

./: .env.example  .gitignore  BUILD_BRIEF.md  CLAUDE.md  README.md  backfill_titles.py  build_site.py  chair_ab.py  chair_bakeoff.py  config.yaml  documents.py  eval_compare.py  eval_harness.py  gui.py  leader.py  lean_rate.py  memory.py  orchestrator.py  probe_memento.py  pyproject.toml  research.py  router.py  run_e2e.py  seats.py  smoke_test.py  test_all.py  test_escalation.py  test_gui_run.py  test_live.py  verify_providers.py
demo/: eval_demo_result.json  phase3_demo.json
docs/: index.html
